--- a/Navodila in predloga za izdelavo zaključnega dela/literatura.bib
+++ b/Navodila in predloga za izdelavo zaključnega dela/literatura.bib
@@ -1,5 +1,5 @@
 %----------------------------------------------MOJE(begin)------------------------------------------------
-@INPROCEEDINGS{9777570,
+@ARTICLE{9777570,
   author={Li, Xinwang and Chen, Zaili and Zhong, Zhenyu and Ma, Jinqi},
   booktitle={2022 IEEE Asia-Pacific Conference on Image Processing, Electronics and Computers (IPEC)}, 
   title={Human-machine Collaboration Method Based on Key Nodes of Human Posture}, 
@@ -9,7 +9,7 @@
   pages={140-146},
   doi={10.1109/IPEC54454.2022.9777570}}
 
-@INPROCEEDINGS{10000133,
+@ARTICLE{10000133,
   author={Docekal, Jan and Rozlivek, Jakub and Matas, Jiri and Hoffmann, Matej},
   booktitle={2022 IEEE-RAS 21st International Conference on Humanoid Robots (Humanoids)}, 
   title={Human Keypoint Detection for Close Proximity Human-Robot Interaction}, 
@@ -34,14 +34,25 @@
   volume={},
   number={},
   pages={1-17},
-  doi={10.1109/TPAMI.2022.3222784}}
+  doi={10.1109/TPAMI.2022.3222784}
+  }
 
-@InProceedings{Sun_2018_ECCV,
-author = {Sun, Xiao and Xiao, Bin and Wei, Fangyin and Liang, Shuang and Wei, Yichen},
-title = {Integral Human Pose Regression},
-booktitle = {Proceedings of the European Conference on Computer Vision (ECCV)},
-month = {September},
-year = {2018}
+
+@ARTICLE{regart,
+  author       = {Xiao Sun and
+                  Bin Xiao and
+                  Shuang Liang and
+                  Yichen Wei},
+  title        = {Integral Human Pose Regression},
+  journal      = {CoRR},
+  volume       = {abs/1711.08229},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1711.08229},
+  eprinttype    = {arXiv},
+  eprint       = {1711.08229},
+  timestamp    = {Mon, 13 Aug 2018 16:47:22 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1711-08229.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @misc{heatmap_website,
@@ -51,13 +62,67 @@ year = {2018}
     note = "[Dostopano: 3. 5. 2023]"
 }
 
-@article{cnn_clanek,
+@ARTICLE{cnn_clanek,
 author = {O'Shea, Keiron and Nash, Ryan},
 year = {2015},
 month = {11},
 pages = {},
 title = {An Introduction to Convolutional Neural Networks},
 journal = {ArXiv e-prints}
+}
+
+@ARTICLE{PPNMS,
+  author       = {Haoshu Fang and
+                  Shuqin Xie and
+                  Cewu Lu},
+  title        = {{RMPE:} Regional Multi-person Pose Estimation},
+  journal      = {CoRR},
+  volume       = {abs/1612.00137},
+  year         = {2016},
+  url          = {http://arxiv.org/abs/1612.00137},
+  eprinttype    = {arXiv},
+  eprint       = {1612.00137},
+  timestamp    = {Mon, 13 Aug 2018 16:48:28 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/FangXL16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{confidence_clanek,
+  author       = {Luca Ferranti and
+                  Xiaotian Li and
+                  Jani Boutellier and
+                  Juho Kannala},
+  title        = {Can You Trust Your Pose? Confidence Estimation in Visual Localization},
+  journal      = {CoRR},
+  volume       = {abs/2010.00347},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2010.00347},
+  eprinttype    = {arXiv},
+  eprint       = {2010.00347},
+  timestamp    = {Mon, 12 Oct 2020 17:53:10 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2010-00347.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{confidence_website,
+    author = "Dan Oved",
+    title = "{Real-time Human Pose Estimation in the Browser with TensorFlow.js}",
+    howpublished = "Dosegljivo: \url{https://blog.tensorflow.org/2018/05/real-time-human-pose-estimation-in.html}",
+    note = "[Dostopano: 6. 5. 2023]"
+}
+
+@misc{DOF_website,
+    author = "Robert Sheldon",
+    title = "{What is degrees of freedom (mechanics)?}",
+    howpublished = "Dosegljivo: \url{https://www.techtarget.com/whatis/definition/degrees-of-freedom}",
+    note = "[Dostopano: 7. 5. 2023]"
+}
+
+@misc{panda_website,
+    author = "Franka Emika GmbH"
+    title = "Franka Emika PANDA User Handbook Manual",
+    howpublished = "Dosegljivo: \url{https://wwwpub.zih.tu-dresden.de/~s5990957/Franka-Panda-UserGuide-eng.pdf}",
+    note = "[Dostopano: 10. 5. 2023]"
 }
 
 
