--- a/literatura.bib
+++ b/literatura.bib
@@ -125,6 +125,13 @@ journal = {ArXiv e-prints}
     note = "[Dostopano: 10. 5. 2023]"
 }
 
+@misc{ros4hri,
+    author = "ROS4HRI organisation"
+    title = "Human Description URDF",
+    howpublished = "Dosegljivo: \url{https://github.com/ros4hri/human_description}",
+    note = "[Dostopano: 5. 6. 2023]"
+}
+
 
 
 
